--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -76,6 +76,7 @@ footer{
   display: flex;
   align-items: center;
   text-align: center;
+  flex-shrink: 0;
   color: #fff;
   cursor: pointer;
 }
@@ -96,6 +97,7 @@ footer{
 .nav-right{
   display: flex;
   align-items: center;
+  flex-shrink: 0;
   height: inherit;
   padding: 20px;
   color: red;
